Timestamp/date diff using diff between extracted date part

--- a/notebooks/IbisMapD.ipynb
+++ b/notebooks/IbisMapD.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7fafcc9ede48>"
+       "<ibis.mapd.client.MapDClient at 0x7f2e6c52b6d8>"
       ]
      },
      "execution_count": 4,
@@ -1577,37 +1577,33 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(YEAR, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(YEAR FROM \"arr_timestamp\") - EXTRACT(YEAR FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(MONTH, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(MONTH FROM \"arr_timestamp\") - EXTRACT(MONTH FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(DAY, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(DAY FROM \"arr_timestamp\") - EXTRACT(DAY FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(WEEK, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(HOUR FROM \"arr_timestamp\") - EXTRACT(HOUR FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(HOUR, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(MINUTE FROM \"arr_timestamp\") - EXTRACT(MINUTE FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(MINUTE, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "TIMESTAMP DIFF:: SELECT TIMESTAMPDIFF(SECOND, \"arr_timestamp\", \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(SECOND FROM \"arr_timestamp\") - EXTRACT(SECOND FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
    ],
    "source": [
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'YEAR')))\n",
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'MONTH')))\n",
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'DAY')))\n",
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'WEEK')))\n",
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'hour')))\n",
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'minute')))\n",
-    "compile_op('TIMESTAMP DIFF:', (t['arr_timestamp'].diff(t['dep_timestamp'], 'second')))"
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].year() - t['dep_timestamp'].year())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].month() - t['dep_timestamp'].month())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].day() - t['dep_timestamp'].day())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].hour() - t['dep_timestamp'].hour())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].minute() - t['dep_timestamp'].minute())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].second() - t['dep_timestamp'].second())"
    ]
   },
   {
@@ -1620,37 +1616,21 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(YEAR, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(YEAR FROM CAST(\"arr_timestamp\" AS DATE)) - EXTRACT(YEAR FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(MONTH, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(MONTH FROM CAST(\"arr_timestamp\" AS DATE)) - EXTRACT(MONTH FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(DAY, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(WEEK, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(HOUR, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(MINUTE, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "DATE DIFF:: SELECT TIMESTAMPDIFF(SECOND, CAST(CAST(\"arr_timestamp\" AS DATE) as timestamp), \"dep_timestamp\") AS tmp\n",
+      "TIMESTAMP DIFF:: SELECT EXTRACT(DAY FROM CAST(\"arr_timestamp\" AS DATE)) - EXTRACT(DAY FROM \"dep_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
    ],
    "source": [
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'YEAR')))\n",
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'MONTH')))\n",
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'DAY')))\n",
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'WEEK')))\n",
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'hour')))\n",
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'minute')))\n",
-    "compile_op('DATE DIFF:', (t['arr_timestamp'].cast('date').diff(t['dep_timestamp'], 'second')))"
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].cast('date').year() - t['dep_timestamp'].year())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].cast('date').month() - t['dep_timestamp'].month())\n",
+    "compile_op('TIMESTAMP DIFF:', t['arr_timestamp'].cast('date').day() - t['dep_timestamp'].day())"
    ]
   }
  ],
