Added readme file

--- a/notebooks/IbisMapD.ipynb
+++ b/notebooks/IbisMapD.ipynb
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7f2e6c52b6d8>"
+       "<ibis.mapd.client.MapDClient at 0x7fdd66095550>"
       ]
      },
      "execution_count": 4,
@@ -889,13 +889,16 @@
       "degrees: SELECT degrees(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
+      "degress: SELECT degrees(\"taxiin\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
       "exp: SELECT exp(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "floor: SELECT floor(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "log: SELECT log(\"taxiin\") AS tmp\n",
+      "log: SELECT ln(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "ln: SELECT ln(\"taxiin\") AS tmp\n",
@@ -916,7 +919,10 @@
       "radians: SELECT radians(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "sign: SELECT SIGN(\"taxiin\") AS tmp\n",
+      "radians: SELECT radians(\"taxiin\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
+      "sign: SELECT sign(\"taxiin\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "sqrt: SELECT sqrt(\"taxiin\") AS tmp\n",
@@ -932,16 +938,18 @@
    "source": [
     "compile_op('abs', t['taxiin'].abs())\n",
     "compile_op('ceil', t['taxiin'].ceil())\n",
-    "compile_op('degrees', t['taxiin'].degrees())  # MapD function\n",
+    "compile_op('degrees', t['taxiin'].degrees())  # new\n",
+    "compile_op('degress', t['taxiin'].rad2deg())  # new\n",
     "compile_op('exp', t['taxiin'].exp())\n",
     "compile_op('floor', t['taxiin'].floor())\n",
     "compile_op('log', t['taxiin'].log())\n",
     "compile_op('ln', t['taxiin'].ln())\n",
     "compile_op('log10', t['taxiin'].log10())\n",
     "compile_op('mod', t['taxiin'].mod(2))\n",
-    "compile_op('pi()', t[t['taxiin'], ibis.pi.name('pi')])  # MapD function\n",
+    "compile_op('pi()', t[t['taxiin'], ibis.pi.name('pi')])  # new\n",
     "compile_op('pow', t['taxiin'].pow(2))\n",
-    "compile_op('radians', t['taxiin'].radians())  # MapD function\n",
+    "compile_op('radians', t['taxiin'].radians())  # new\n",
+    "compile_op('radians', t['taxiin'].deg2rad())  # new\n",
     "compile_op('sign', t['taxiin'].sign())\n",
     "compile_op('sqrt', t['taxiin'].sqrt())\n",
     "compile_op('truncate', t['taxiin'].truncate(16))  # MapD function\n",
@@ -986,7 +994,7 @@
       "distinct count: SELECT count(DISTINCT \"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "distinct count/nunique: SELECT count(\"taxiin\") AS v\n",
+      "distinct count/nunique: SELECT count(DISTINCT \"taxiin\") AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "approx distinct count: SELECT approx_count_distinct(\"taxiin\", 10) AS v\n",
@@ -1039,8 +1047,6 @@
       "================================================================================\n",
       "covar_samp_float: SELECT COVAR_SAMP_FLOAT(\"dest_lat\", \"taxiout\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
-      "stddev SELECT STDDEV_SAMP(\"arrdelay\") AS std\n",
-      "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "stddev: SELECT STDDEV_SAMP(\"arrdelay\") AS std\n",
       "FROM mapd.flights_2008_10k\n",
@@ -1087,7 +1093,6 @@
     "compile_op('covar_pop_float', t['dest_lat'].cov(t['taxiout'], how='pop'))\n",
     "compile_op('covar_samp', t['taxiin'].cov(t['taxiout']))\n",
     "compile_op('covar_samp_float', t['dest_lat'].cov(t['taxiout']))\n",
-    "print('stddev', t['arrdelay'].std().compile())\n",
     "compile_op('stddev', t['arrdelay'].std())\n",
     "compile_op('stddev_float', t['dest_lat'].std())\n",
     "compile_op('stddev_pop', t['taxiin'].std(how='pop'))\n",
@@ -1183,7 +1188,7 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "distance_in_meters: SELECT distance_in_meters(\"origin_lon\", \"origin_lat\", \"dest_lon\", \"dest_lat\") AS tmp\n",
+      "distance_in_meters: SELECT DISTANCE_IN_METERS(\"origin_lon\", \"origin_lat\", \"dest_lon\", \"dest_lat\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "conv_4326_900913_x: SELECT conv_4326_900913_x(\"taxiin\") AS tmp\n",
@@ -1195,7 +1200,7 @@
     }
    ],
    "source": [
-    "compile_op('distance_in_meters', t['origin_lon'].distance_in_meters(t['origin_lat'], t['dest_lon'], t['dest_lat']))\n",
+    "compile_op('distance_in_meters', ibis.distance(t['origin_lon'], t['origin_lat'], t['dest_lon'], t['dest_lat']))\n",
     "compile_op('conv_4326_900913_x', t['taxiin'].conv_4326_900913_x())\n",
     "compile_op('conv_4326_900913_y', t['taxiin'].conv_4326_900913_y())"
    ]
@@ -1223,16 +1228,16 @@
       "length: SELECT *, LENGTH('abcde') AS v\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "like: SELECT \"dest_name\" like 'L%' AS tmp\n",
+      "like: SELECT \"dest_name\" LIKE 'L%' AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "not_like: SELECT NOT \"dest_name\" like 'L%' AS tmp\n",
+      "not_like: SELECT NOT \"dest_name\" LIKE 'L%' AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "ilike: SELECT \"dest_name\" ilike 'L%' AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "regexp/regexp_like: SELECT \"dest_name\" REGEXP 'L%' AS tmp\n",
+      "regexp/regexp_like: SELECT regexp_like(\"dest_name\", 'L%') AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -1263,7 +1268,7 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "now: SELECT *, NOW() AS tmp\n",
+      "now: SELECT *, now() AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
@@ -1294,6 +1299,9 @@
       "date_trunc: SELECT DATE_TRUNC(DAY, \"arr_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
+      "date_trunc: SELECT DATE_TRUNC(WEEK, \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
+      "================================================================================\n",
       "date_trunc: SELECT DATE_TRUNC(HOUR, \"arr_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
@@ -1301,30 +1309,12 @@
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "date_trunc: SELECT DATE_TRUNC(SECOND, \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "date_trunc: SELECT DATE_TRUNC(WEEK, \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "date_trunc: SELECT DATE_TRUNC(MILLENNIUM, \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "date_trunc: SELECT DATE_TRUNC(CENTURY, \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "date_trunc: SELECT DATE_TRUNC(DECADE, \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "date_trunc: SELECT DATE_TRUNC(QUARTERDAY, \"arr_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
    ],
    "source": [
-    "for date_part in (\n",
-    "    'YEAR', 'QUARTER', 'MONTH', 'DAY', 'HOUR', 'MINUTE', 'SECOND',\n",
-    "    'WEEK', 'MILLENNIUM', 'CENTURY', 'DECADE', 'QUARTERDAY' \n",
-    "):\n",
+    "for date_part in ('Y', 'Q', 'M', 'D', 'W', 'h', 'm', 's'):\n",
     "    compile_op('date_trunc', t['arr_timestamp'].truncate(date_part))"
    ]
   },
@@ -1338,53 +1328,26 @@
      "output_type": "stream",
      "text": [
       "================================================================================\n",
-      "extract: SELECT EXTRACT(YEAR FROM \"arr_timestamp\") AS tmp\n",
+      "date_trunc: SELECT DATE_TRUNC(YEAR, CAST(\"arr_timestamp\" AS DATE)) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "extract: SELECT EXTRACT(QUARTER FROM \"arr_timestamp\") AS tmp\n",
+      "date_trunc: SELECT DATE_TRUNC(QUARTER, CAST(\"arr_timestamp\" AS DATE)) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "extract: SELECT EXTRACT(MONTH FROM \"arr_timestamp\") AS tmp\n",
+      "date_trunc: SELECT DATE_TRUNC(MONTH, CAST(\"arr_timestamp\" AS DATE)) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "extract: SELECT EXTRACT(DAY FROM \"arr_timestamp\") AS tmp\n",
+      "date_trunc: SELECT DATE_TRUNC(DAY, CAST(\"arr_timestamp\" AS DATE)) AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
-      "extract: SELECT EXTRACT(HOUR FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(MINUTE FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(SECOND FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(DOW FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(DOW FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(DOY FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(EPOCH FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(QUARTERDAY FROM \"arr_timestamp\") AS tmp\n",
-      "FROM mapd.flights_2008_10k\n",
-      "================================================================================\n",
-      "extract: SELECT EXTRACT(WEEK FROM \"arr_timestamp\") AS tmp\n",
+      "date_trunc: SELECT DATE_TRUNC(WEEK, CAST(\"arr_timestamp\" AS DATE)) AS tmp\n",
       "FROM mapd.flights_2008_10k\n"
      ]
     }
    ],
    "source": [
-    "for date_part in (\n",
-    "    'YEAR', 'QUARTER', 'MONTH', 'DAY', 'HOUR', 'MINUTE', 'SECOND',\n",
-    "    'DOW', 'ISODOW', 'DOY', 'EPOCH', 'QUARTERDAY', 'WEEK'\n",
-    "):\n",
-    "    compile_op('extract', t['arr_timestamp'].extract(date_part))"
+    "for date_part in ('Y', 'Q', 'M', 'D', 'W'):\n",
+    "    compile_op('date_trunc', t['arr_timestamp'].cast('date').truncate(date_part))"
    ]
   },
   {
@@ -1396,6 +1359,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SELECT EXTRACT(YEAR FROM \"arr_timestamp\") AS tmp\n",
+      "FROM mapd.flights_2008_10k\n",
       "================================================================================\n",
       "year: SELECT EXTRACT(YEAR FROM \"arr_timestamp\") AS tmp\n",
       "FROM mapd.flights_2008_10k\n",
@@ -1419,6 +1384,7 @@
    ],
    "source": [
     "# SOME DIRECT EXTRACT OPERATIONS \n",
+    "print(t['arr_timestamp'].year().compile())\n",
     "compile_op('year', t['arr_timestamp'].year())\n",
     "compile_op('month', t['arr_timestamp'].month())\n",
     "compile_op('day', t['arr_timestamp'].day())\n",
