--- a/notebooks/IbisMapD-DML.ipynb
+++ b/notebooks/IbisMapD-DML.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "mapd_cli = ibis.mapd.connect(\n",
     "    host='localhost', user='mapd', password='HyperInteractive',\n",
-    "    port=9091, dbname='mapd'\n",
+    "    port=9091, database='mapd'\n",
     ")"
    ]
   },
@@ -59,7 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "<ibis.mapd.client.MapDClient at 0x7fdd66095550>"
+       "<ibis.mapd.client.MapDClient at 0x7fb80829fcc0>"
       ]
      },
      "execution_count": 4,
@@ -166,7 +166,11 @@
     {
      "data": {
       "text/plain": [
-       "['flights_2008_10k']"
+       "['flights_2008_10k',\n",
+       " 'diamonds',\n",
+       " 'batting',\n",
+       " 'awards_players',\n",
+       " 'functional_alltypes']"
       ]
      },
      "execution_count": 8,
