--- a/notebooks/ibis/5-IO-Create-Insert-External-Data.ipynb
+++ b/notebooks/ibis/5-IO-Create-Insert-External-Data.ipynb
@@ -177,9 +177,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.DataFrame({'min_foo': [1,2,3], 'max_foo': [4, 5, 6], 'sum_foo': [4, 7, 9]})\n",
-    "# con.insert('testing_table', df)\n",
-    "# con.table('testing_table')"
+    "df = pd.DataFrame({'min_foo': [1,2,3], 'max_foo': [4, 5, 6], 'sum_foo': [4, 7, 9]})\n",
+    "con.insert('testing_table', df)\n",
+    "con.table('testing_table')"
    ]
   },
   {
