Add notebooks that migrate data with ibis.

--- a/notebooks/data_migrate_tweets.ipynb
+++ b/notebooks/data_migrate_tweets.ipynb
@@ -58,33 +58,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prev, expr, df = sample()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new = ibis.mapd.connect(\n",
-    "    host='qs-dev.mapd.com', port='9091', \n",
-    "    user='mapd', password='HyperInteractive', \n",
-    "    database='mapd')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not 'tweet' in new.list_tables():\n",
-    "    new.load_data('tweet', df)"
+    "def main():\n",
+    "    prev, expr, df = sample()\n",
+    "\n",
+    "    new = ibis.mapd.connect(\n",
+    "        host='qs-dev.mapd.com', port='9091', \n",
+    "        user='mapd', password='HyperInteractive', \n",
+    "        database='mapd')\n",
+    "\n",
+    "    if not 'tweet' in new.list_tables():\n",
+    "        new.load_data('tweet', df)\n",
+    "\n",
+    "if __name__ == '__main__': main()"
    ]
   }
  ],
