--- a/notebooks/datasets.ipynb
+++ b/notebooks/datasets.ipynb
@@ -29,19 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def try_to_load(dataset):\n",
-    "    \"\"\"Some datasets will not load.\"\"\"\n",
     "    try: return dataset()\n",
-    "    except: return DataFrame()"
+    "    except: \n",
+    "        \"\"\"Some datasets will not load.\"\"\"\n",
+    "        return DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +50,12 @@
     "    return {\n",
     "        object: try_to_load(getattr(vega_datasets.data, object)) \n",
     "        for i, object in enumerate(dir(vega_datasets.data))\n",
-    "        if not limit or i < limit\n",
-    "    }"
+    "        if not limit or i < limit}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,17 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from importnb import Notebook\n",
     "\n",
     "with Notebook():\n",
-    "    try:\n",
-    "        from . import truncate_tweets\n",
-    "    except:\n",
-    "        import truncate_tweets"
+    "    try: from . import data_migrate_tweets\n",
+    "    except: import data_migrate_tweets"
    ]
   },
   {
@@ -90,16 +88,22 @@
    "outputs": [],
    "source": [
     "def preprocess_df(df):\n",
+    "    \"\"\"Some data proprocessing steps\n",
+    "    \"\"\"\n",
     "    global MAPPING\n",
+    "    \n",
+    "    \"\"\"MapD does not like some characters.\"\"\"\n",
     "    df.columns = df.columns.astype(str).str.replace(' ', '_').str.replace('-', '_').str.replace('\"', '')\n",
     "\n",
+    "    \"\"\"Rename the columns that collide with keywords\"\"\"\n",
     "    df = df.rename(columns=MAPPING)\n",
     "    \n",
+    "    \"\"\"Nasty integers\"\"\"\n",
     "    if 'Title' in df.columns:\n",
     "        \"\"\"In movies the integers mess things up\"\"\"\n",
     "        df['Title'] = df['Title'].astype(str)\n",
     "\n",
-    "    \"\"\"Rename the columns\"\"\"\n",
+    "    \"\"\"Stringify Column Names.\"\"\"\n",
     "    df = df[df.columns[list(df.columns.astype(str).map(lambda x: x[0].isalpha()))]]\n",
     "    return df\n",
     "    "
@@ -171,10 +175,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "qsdev = dict(\n",
+    "    host='qs-dev.mapd.com', port='9092', \n",
+    "    user='mapd', password='HyperInteractive', \n",
+    "    database='mapd', protocol='http')\n",
+    "\n",
     "default = dict(\n",
     "    host='192.168.99.100', user='mapd', password='HyperInteractive',\n",
     "    port=32769, database='mapd')\n",
@@ -182,11 +191,11 @@
     "def mapd(**host):\n",
     "    return ibis.mapd.connect(**(host or default))\n",
     "\n",
-    "def build_mapd():    \n",
+    "def build_mapd(**host):    \n",
     "    with mapd(**host) as mapd:\n",
     "        mapd.load_data = mapd.con.load_table\n",
     "        migrate(mapd, **extras)\n",
-    "        migrate(mapd, tweets=truncate_tweets.sample(1000))\n",
+    "        migrate(mapd, tweets=data_migrate_tweets.sample(1000))\n",
     "        migrate(mapd, **load_vega_datasets())\n",
     "    return host"
    ]
@@ -200,16 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_pandas():\n",
     "    pandas = ibis.pandas.connect({})\n",
     "    pandas = migrate(pandas, **extras, **load_vega_datasets())\n",
-    "    pandas = migrate(pandas, tweets=truncate_tweets.sample(1000)[-1])\n",
+    "    pandas = migrate(pandas, tweets=data_migrate_tweets.sample(1000)[-1])\n",
     "    return pandas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
